log api update
