# app/Http/Controllers/Web/LogController.php
@@ -15,6 +15,43 @@ class LogController extends Controller
     {
         return view('web.log');
     }
+    /**
+     * @OA\GET(
+     *     path="/api/log-file",
+     *     summary="reads serial connection & historical connection",
+     *     description="reads serial log, can read live connection",
+     *     tags={"Log"},
+     *     security = {{ "Authorization": {} }},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         description="json body",
+     *        @OA\JsonContent(
+     *          required={"fl_name"},
+     *          type="object",
+     *            @OA\Property(property="fl_name", type="string", example="COM{port}-log-{dd}_{m}_{yyyy}.txt", description="reads log file name"),
+     *        ),
+     *     ),
+     *    @OA\Response(response=200,description="OK")
+     * )
+     * 
+     * @OA\POST(
+     *     path="/api/log-file",
+     *     summary="write to serial connection",
+     *     description="manual write to serial pipe file, can write to live connection",
+     *     tags={"Log"},
+     *     security = {{ "Authorization": {} }},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         description="json body",
+     *        @OA\JsonContent(
+     *          required={"fl_name"},
+     *          type="object",
+     *            @OA\Property(property="fl_name", type="json", example="COM{port}-pipe-{dd}_{m}_{yyyy}.txt", description="write to pipe file"),
+     *        ),
+     *     ),
+     *    @OA\Response(response=200,description="OK")
+     * )
+     */
     public static function log_file(Request $req): array
     {
         $fl_name = $_POST['fl_name'] ?? $_GET['fl_name'];
@@ -24,12 +61,17 @@ class LogController extends Controller
         }
         return SerialHelper::reader($fl_name);
     }
-    public static function write_log_file(Request $req)
-    {
-        $com = "COM4";
-        SerialHelper::write($com, $_POST['message']);
-        return;
-    }
+    /**
+     * @OA\GET(
+     *     path="/api/list-log-file",
+     *     summary="list all log file",
+     *     description="list all historical log file available",
+     *     tags={"Log"},
+     *     security = {{ "Authorization": {} }},
+     *    @OA\Response(response=200,description="OK")
+     * )
+     * 
+     */
     public static function list_log_file(): array
     {
         $lst = scandir(app_path('Comms/__pipe'));
